<resources>
    // Game
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="history_name">Your Game History</string>
    <string name="instructions_text">Instructions: select rock, paper or scissors to play.</string>
    <string name="welcome_text">Welcome</string>
    <string name="statisticsTitle_text">Your all time statistics</string>
    <string name="statistics_text">Win:\u0020%d\u0020\u0020\u0020Draw:\u0020%d\u0020\u0020\u0020Lose:\u0020%d</string>
    <string name="result_text">%s</string>
    <string name="vs_text">V.S.</string>
    <string name="computer_text">Computer</string>
    <string name="player_text">You</string>
    <string name="game_history">Go to history</string>

    // Game History
    <string name="computerWin_text">Computer wins!</string>
    <string name="playerWin_text">You win!</string>
    <string name="delete_history">Delete game history</string>
    <string name="winner_text">Name wins!</string>
    <string name="date_text">Date, Time, Timezone</string>

</resources>
