<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/winner_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWinner" />

    <ImageView
        android:id="@+id/ivGHComputer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivGHPlayer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorPrimaryDark"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivGHComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/tvGHComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/computer_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/ivGHComputer"
        app:layout_constraintStart_toStartOf="@+id/ivGHComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivGHComputer" />

    <TextView
        android:id="@+id/tvGHPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/ivGHPlayer"
        app:layout_constraintStart_toStartOf="@+id/ivGHPlayer"
        app:layout_constraintTop_toBottomOf="@+id/ivGHPlayer" />

    <TextView
        android:id="@+id/tvGHVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/vs_text"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivGHPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivGHComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintVertical_bias="0.16000003" />
</androidx.constraintlayout.widget.ConstraintLayout>